manifest/ghost-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost
spec:
  type: NodePort
  ports:
  - port: 81
    targetPort: 2368
  selector:
    app: ghost
